--- a/main.css
+++ b/main.css
@@ -1,46 +1,104 @@
-.container {
-	margin: 3em auto;
-	width: 600px;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* my CSS starts here */
+html {
+	height: 100%;
+}
+
+body {
+	margin: 0;
+	background-repeat: no-repeat;
+	background: linear-gradient(to bottom right, white 35%, lightgrey 70%);
+	background-attachment: fixed;
+}
+
+#inspire {
+	margin-left: 50px;
+	font-family: impact;
+	font-size: 50px;
+	text-align: center;
+	margin-top: 8%;
+}
+
+.intro {
+	font-size: 20px;
+	text-align: center;
+	font-family: impact;
+	margin-top: 7px;
+}
+
+.instructions {
+	text-align: center;
+	margin-top: 1%;
+}
+
+#submitButton {
+	background-color: #cecece;
+	padding: 25px;
+	font-size: 50px;
+	font-family: "Permanent Marker";
+	border: 2px solid black;
+	border-radius: 15px;
 }
 
 .hidden {
 	display: none;
 }
 
-.left {
-	float: left;
+#photos {
+	margin: 0px 100px 0px 100px;
+	padding: 15px 50px 50px 50px;
+
 }
 
-.stack-image {
-	background: url('images/stack-icon.png') no-repeat center center;
-	width: 200px;
-	height: 200px;
-	-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  margin-right: 1em;
-  border-radius: 5px;
-}
-
-.intro {
-	margin-bottom: 1em;
-}
-.stack {
-	clear: both;
-}
-
-.inspiration { 
-	margin-left: 3em;
-}
-
-.result {
+#photos img {
 	border: 1px solid black;
-	padding: 5px;
-	margin: 0 auto 1em auto;
-}
+	margin: 6px;
 
-.error {
-	background-color: #F78181;
-	padding: 1em;
 }
